Prevent margin collapse on row--lead

--- a/client/scss/base/_row.scss
+++ b/client/scss/base/_row.scss
@@ -6,6 +6,8 @@
 
 .row--lead {
   position: relative;
+  overflow: hidden;
+  margin-bottom: 1rem;
 
   &:before {
     position: absolute;
